--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 # TODO: Lägg till databas-konfiguration här under
+spring.application.name=chatt-app-spring
+spring.datasource.url=jdbc:mysql://localhost:3306/christoffer_chattapp
+spring.datasource.username=christoffer
+spring.datasource.password=password2025
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibarnate.format_sql=false
+logging.level.root=WARN
